Restore Arc Usb permission correctly.

Arc usb permission are not restores correctly. When detecting a
non-matching package, we should skip rather than abort.

Bug: 837292
Test: Manual test with reboot.
Change-Id: Id66156dcee36873f8afccaab5a619bafffd3721a
Reviewed-on: https://chromium-review.googlesource.com/1030785
Commit-Queue: Long Cheng <lgcheng@google.com>
Reviewed-by: Yury Khmel <khmel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#554513}
Former-commit-id: 3cc08b02c472f6c081c47270b7f94a478120fe23